overlay issue on mobile screens for hero + nav

--- a/public/less/ssb-site-builder/ssb-sections/ssb-nav-hero.less
+++ b/public/less/ssb-site-builder/ssb-sections/ssb-nav-hero.less
@@ -9,7 +9,7 @@
             text-align: center !important;
         }
     }
-    @media screen and (max-width: 1023px) {
+    @media screen and (max-width: 1024px) {
         .ssb-page-section-layout-nav-hero-v1{
             .bg{
                 z-index: 1;
